<resources>
    <string name="app_name">QuickChat</string>
    <string name="menu_logout_label">Logout</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="login_text">Login</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="username_hint">Username</string>
    <string name="password_hint">Password</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="signup_error_message">Please make sure you enter a username, password, and email address.</string>
    <string name="signup_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="login_error_title">Oops!</string>
    <string name="empty_inbox_label">No new messages!</string>
    <string name="empty_friends_label">Add friends to begin!</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry!</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">Oops! There was an error</string>
    <string name="video_file_size_warning">The selected video must be less than 10MB</string>
    <string name="error_external_storage">There was an error accessing the gallery</string>
    <string name="error_opening_file">There was an error opening the file</string>
    <string name="error_file_size_too_large">The selected file is too large! Please select a new file.</string>
    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>
    <string name="title_activity_recepients">"Choose Recepients "</string>
    <string name="choose_friends_empty">Choose some friends first</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file.</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message. Please try again.</string>
    <string name="title_activity_view_image">ViewImageActivity</string>
</resources>
