<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">

    <item android:id="@+id/action_edit_friends" android:title="@string/menu_edit_friends_label"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_logout" android:title="@string/menu_logout_label"
        android:orderInCategory="100" app:showAsAction="never" />

    <item android:id="@+id/action_camera" android:title="@string/menu_camera_label"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="100" app:showAsAction="always"
        android:visible="true"/>

    <item android:id="@+id/action_send" android:title="Send"
        android:orderInCategory="100" app:showAsAction="always"
        android:visible="false"
        android:icon="@drawable/ic_action_send_now"/>

</menu>
